Added ability to add multiple users

--- a/TTRPGHelper/build.gradle
+++ b/TTRPGHelper/build.gradle
@@ -34,8 +34,13 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    testImplementation 'junit:junit:4.12'
-    implementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
+    implementation 'junit:junit:4.13.1'
+    compileOnly("org.projectlombok:lombok:1.18.38")
+    annotationProcessor("org.projectlombok:lombok:1.18.38")
+
+    testCompileOnly("org.projectlombok:lombok:1.18.38")
+    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
 }
 
 tasks.named('test') {
