--- a/TTRPGHelper/src/main/resources/application.properties
+++ b/TTRPGHelper/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=TTRPGHelper
 server.port=8081
 server.address=localhost
-spring.security.user.name=foo
-spring.security.user.password=foo1
+spring.security.user.name=admin
+spring.security.user.password=foo123
+#spring.datasource.url=jdbc:mysql://localhost:3306/ttrpg_helper_db
+#spring.datasource.username=root
+#spring.datasource.password=maxthedog3!
+#
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
