--- a/TTRPGHelper/src/main/resources/application.properties
+++ b/TTRPGHelper/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8081
 server.address=localhost
 spring.security.user.name=admin
 spring.security.user.password=foo123
-#spring.datasource.url=jdbc:mysql://localhost:3306/ttrpg_helper_db
-#spring.datasource.username=root
-#spring.datasource.password=maxthedog3!
-#
+spring.datasource.url=jdbc:mysql://localhost:3306/ttrpg_helper_db
+spring.datasource.username=root
+spring.datasource.password=Maxthedog3!
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
