--- a/TTRPGHelper/build.gradle
+++ b/TTRPGHelper/build.gradle
@@ -13,6 +13,18 @@ java {
     }
 }
 
+bootBuildImage {
+    imageName = 'dsaposs/ttrpg/alien_app:latest'
+    publish = true
+    docker {
+        publishRegistry {
+            username = 'dsaposs'
+            password = 'zx5al9tyE'
+            url = 'https://index.docker.io/v1/'
+        }
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -27,9 +39,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.session:spring-session-core'
+    implementation 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     implementation 'com.mysql:mysql-connector-j'
+    implementation 'org.modelmapper:modelmapper:3.2.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
@@ -45,4 +59,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.named('build') {
+    dependsOn tasks.named('bootBuildImage')
 }
