--- a/ttrpg-app/build.gradle
+++ b/ttrpg-app/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.0'
+    id 'io.spring.dependency-management' version '1.1.4'
+}
+
+jar {
+    enabled = false
 }
 
 group = 'com.ttrpg'
@@ -11,35 +16,42 @@ allprojects {
         mavenCentral()
     }
 }
+dependencies {
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
+//    implementation 'org.springframework.boot:spring-boot-starter-parent'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+}
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-web-services'
-        implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'com.mysql:mysql-connector-j'
+        implementation 'junit:junit'
         implementation 'org.modelmapper:modelmapper:3.2.0'
-        implementation 'junit:junit:4.13.1'
 
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
-        developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'io.projectreactor:reactor-test'
         testImplementation 'org.springframework.security:spring-security-test'
-        testImplementation 'junit:junit:4.13.1'
+        testImplementation 'junit:junit'
 
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-        compileOnly("org.projectlombok:lombok:1.18.38")
-        annotationProcessor("org.projectlombok:lombok:1.18.38")
+        compileOnly("org.projectlombok:lombok")
+        annotationProcessor("org.projectlombok:lombok")
 
-        testCompileOnly("org.projectlombok:lombok:1.18.38")
-        testAnnotationProcessor("org.projectlombok:lombok:1.18.38")
+        testCompileOnly("org.projectlombok:lombok")
+        testAnnotationProcessor("org.projectlombok:lombok")
+    }
+
+    jar {
+        enabled = true
     }
 }
