--- a/ttrpg-app/compose.yaml
+++ b/ttrpg-app/compose.yaml
@@ -1,10 +1,10 @@
 version: '3.8'
 services:
-  mysql:
-    image: mysql:latest
-    environment:
-      - MYSQL_DATABASE=ttrpg_helper_db
-      - MYSQL_USER=db_user
-      - MYSQL_PASSWORD=secret
-    ports:
-      - '3306:3306'
+#  mysql:
+#    image: mysql:latest
+#    environment:
+#      - MYSQL_DATABASE=ttrpg_helper_db
+#      - MYSQL_USER=db_user
+#      - MYSQL_PASSWORD=secret
+#    ports:
+#      - '3306:3306'
