--- a/ttrpg-app/build.gradle
+++ b/ttrpg-app/build.gradle
@@ -31,27 +31,20 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.boot:spring-boot-starter-web-services'
         implementation 'com.mysql:mysql-connector-j'
         implementation 'junit:junit'
         implementation 'org.modelmapper:modelmapper:3.2.0'
+        implementation("org.projectlombok:lombok")
+        annotationProcessor("org.projectlombok:lombok:1.18.38")
 
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'org.springframework.security:spring-security-test'
         testImplementation 'junit:junit'
-
-        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-        compileOnly("org.projectlombok:lombok")
-        annotationProcessor("org.projectlombok:lombok")
-
-        testCompileOnly("org.projectlombok:lombok")
-        testAnnotationProcessor("org.projectlombok:lombok")
     }
 
     jar {
         enabled = true
+    }
+
+    tasks.named('build') {
+        dependsOn tasks.named('bootBuildImage')
     }
 }
