--- a/ttrpg-app/core/build.gradle
+++ b/ttrpg-app/core/build.gradle
@@ -1,3 +1,11 @@
-jar {
-    enabled = false
+bootBuildImage {
+    imageName = 'dsaposs/ttrpg/core_app:latest'
+    publish = true
+    docker {
+        publishRegistry {
+            username = 'dsaposs'
+            password = 'zx5al9tyE'
+            url = 'https://index.docker.io/v1/'
+        }
+    }
 }
