--- a/ttrpg-app/auth/build.gradle
+++ b/ttrpg-app/auth/build.gradle
@@ -9,3 +9,19 @@ bootBuildImage {
         }
     }
 }
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+    implementation 'org.modelmapper:modelmapper:3.2.0'
+    implementation("org.projectlombok:lombok")
+
+    implementation project(':ttrpg-helper-lib')
+
+    annotationProcessor("org.projectlombok:lombok:1.18.38")
+
+    testImplementation 'junit:junit'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
