--- a/ttrpg-app/build.gradle
+++ b/ttrpg-app/build.gradle
@@ -18,7 +18,6 @@ allprojects {
 }
 dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-//    implementation 'org.springframework.boot:spring-boot-starter-parent'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
@@ -33,17 +32,22 @@ subprojects {
         }
     }
 
+    ext {
+        set('springCloudVersion', "2025.0.0")
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
+
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'com.mysql:mysql-connector-j'
         implementation 'junit:junit'
-        implementation 'org.modelmapper:modelmapper:3.2.0'
-        implementation("org.projectlombok:lombok")
-        annotationProcessor("org.projectlombok:lombok:1.18.38")
 
         testImplementation 'junit:junit'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
     jar {
