--- a/ttrpg-app/service-registry/Dockerfiler
+++ b/ttrpg-app/service-registry/Dockerfiler
@@ -2,4 +2,4 @@
 FROM openjdk:17-jdk-slim
 COPY target/*.jar core.jar
 VOLUME /tmp
-ENTRYPOINT ["java", "-jar", "core_app.jar"]
+ENTRYPOINT ["java", "-jar", "service_registry_app.jar"]
