--- a/ttrpg-app/api/src/main/resources/application.properties
+++ b/ttrpg-app/api/src/main/resources/application.properties
@@ -1,19 +1,15 @@
 spring.application.name=api-gateway-service
 server.port=8080
-server.address=localhost
 
 eurkeka.client.service-url.defualtZone=http://localhost:8761/eurka
 
+spring.cloud.gateway.server.webmvc.routes[0].id=authorization-service
+spring.cloud.gateway.server.webmvc.routes[0].uri=http://localhost:8082/authorization
+spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/authorization/**
 
-
-spring.cloud.gateway.server.webmvc.routes[0].id=core-service
-spring.cloud.gateway.server.webmvc.routes[0].uri=http://localhost:8081
-spring.cloud.gateway.server.webmvc.routes[0].predicates[0]=Path=/game/**
-spring.cloud.gateway.server.webmvc.routes[0].predicates[1]=Path=/character/**
-
-spring.cloud.gateway.server.webmvc.routes[1].id=authorization-service
-spring.cloud.gateway.server.webmvc.routes[1].uri=http://localhost:8082
-spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/authorization/**
+spring.cloud.gateway.server.webmvc.routes[1].id=core-service
+spring.cloud.gateway.server.webmvc.routes[1].uri=http://localhost:8081/character
+spring.cloud.gateway.server.webmvc.routes[1].predicates[0]=Path=/character/**
 
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.apache.http=DEBUG
