--- a/ttrpg-app/auth/src/main/resources/application.properties
+++ b/ttrpg-app/auth/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=authorization-service
 server.port=8082
+server.address=localhost
 
 spring.datasource.username=admin
 spring.datasource.password=foo123
