--- a/ttrpg-app/core/src/main/resources/application.properties
+++ b/ttrpg-app/core/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=core-service
 server.port=8081
+server.address=localhost
 
 spring.datasource.username=admin
 spring.datasource.password=foo123
@@ -12,3 +13,6 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 eurkeka.client.service-url.defualtZone=http://localhost:8761/eurka
+
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.apache.http=DEBUG
