--- a/ttrpg-app/ttrpg-helper-lib/build.gradle
+++ b/ttrpg-app/ttrpg-helper-lib/build.gradle
@@ -13,9 +13,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation("org.projectlombok:lombok")
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.modelmapper:modelmapper:3.2.0'
 
     annotationProcessor("org.projectlombok:lombok:1.18.38")
 }
