--- a/ttrpg-app/api/build.gradle
+++ b/ttrpg-app/api/build.gradle
@@ -12,6 +12,7 @@ bootBuildImage {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
     implementation("org.projectlombok:lombok")
     implementation 'org.modelmapper:modelmapper:3.2.0'
