--- a/ttrpg-app/auth/build.gradle
+++ b/ttrpg-app/auth/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.modelmapper:modelmapper:3.2.0'
     implementation("org.projectlombok:lombok")
 
