--- a/ttrpg-app/core/src/main/resources/application.properties
+++ b/ttrpg-app/core/src/main/resources/application.properties
@@ -1,18 +1,3 @@
 spring.application.name=core-service
-server.port=8081
-server.address=localhost
 
-spring.datasource.username=admin
-spring.datasource.password=foo123
-spring.datasource.url=jdbc:mysql://root@localhost:2706/ttrpg_app_db
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-
-eurkeka.client.service-url.defualtZone=http://localhost:8761/eurka
-
-logging.level.org.springframework.web.client.RestTemplate=DEBUG
-logging.level.org.apache.http=DEBUG
+implementation 'org.springframework.cloud:spring-cloud-starter-config'
