--- a/ttrpg-app/settings.gradle
+++ b/ttrpg-app/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'ttrpg-app'
 
-include('core', 'auth', 'service-registry', 'api', 'ttrpg-helper-lib')
+include('core', 'auth', 'service-registry', 'api', 'ttrpg-helper-lib', 'config')
