--- a/ttrpg-app/core/src/main/resources/application.properties
+++ b/ttrpg-app/core/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=core-service
 
-implementation 'org.springframework.cloud:spring-cloud-starter-config'
+spring.config.import=optional:configserver:http://localhost:8888
